==> Lien182/CANOpen-PushButton/software/Src/CO_driver.c <==
#include <stdlib.h>
#include <string.h>
#include "stm32f0xx_hal.h"
#include "CO_driver.h"
#include "../CANopenNode/stack/CO_Emergency.h"
#include "../Inc/stm32f042_hal_exclude.h"

void CO_CANsetConfigurationMode(int32_t CANbaseAddress){
    
		
	/* Put CAN module in configuration mode */
		/* Enable CAN1 reset state */
    __HAL_RCC_CAN1_FORCE_RESET();
		__NOP();__NOP();__NOP();__NOP();__NOP();
    /* Release CAN1 from reset state */
		__HAL_RCC_CAN1_RELEASE_RESET();
}

CO_ReturnError_t CO_CANmodule_init(
        CO_CANmodule_t         *CANmodule,
        uint32_t                CANbaseAddress,
        CO_CANrx_t              rxArray[],
        uint16_t                rxSize,
        CO_CANtx_t              txArray[],
        uint16_t                txSize,
        uint16_t                CANbitRate,
				uint8_t                 nodeId)
{
    uint16_t i;
    CAN_FilterConfTypeDef CAN_FilterInitStruct;
		uint8_t result;
	
    /* verify arguments */
    if(CANmodule==NULL || rxArray==NULL || txArray==NULL){
        return CO_ERROR_ILLEGAL_ARGUMENT;
    }

    /* Configure object variables */
    CANmodule->CANbaseAddress = CANbaseAddress;
    CANmodule->rxArray = rxArray;
    CANmodule->rxSize = rxSize;
    CANmodule->txArray = txArray;
    CANmodule->txSize = txSize;
    CANmodule->CANnormal = false;
    CANmodule->useCANrxFilters = (rxSize <= 32U) ? true : false;/* microcontroller dependent */
    CANmodule->bufferInhibitFlag = false;
    CANmodule->firstCANtxMessage = true;
    CANmodule->CANtxCount = 0U;
    CANmodule->errOld = 0U;
    CANmodule->em = NULL;

    for(i=0U; i<rxSize; i++){
        CANmodule->rxArray[i].ident = 0U;
        CANmodule->rxArray[i].pFunct = NULL;
    }
    for(i=0U; i<txSize; i++){
        CANmodule->txArray[i].bufferFull = false;
    }

		hcan.Instance = CAN;
			/* deinit CAN controller */
		HAL_CAN_DeInit(&hcan);
	
    switch (CANbitRate)
    {
        case 1000: hcan.Init.Prescaler = 8;
            break;
        case 500: hcan.Init.Prescaler =  16;
            break;
        default:
        case 250: hcan.Init.Prescaler = 32;
            break;
        case 125: hcan.Init.Prescaler = 64;
            break;
        case 100: hcan.Init.Prescaler = 30;
            break;
        case 50: hcan.Init.Prescaler = 160;
            break;
				case 25: hcan.Init.Prescaler = 320;
            break;
        case 20: hcan.Init.Prescaler = 400;
            break;
        case 10: hcan.Init.Prescaler = 800;
            break;
    }
		
    hcan.Init.SJW = CAN_SJW_1TQ;     // changed by CL, old value = CAN_SJW_1tq;
    hcan.Init.BS1 = CAN_BS1_13TQ;    // changed by CL, old value = CAN_BS1_3tq;
    hcan.Init.BS2 = CAN_BS2_2TQ;     // changed by CL, old value = CAN_BS2_2tq;
		
    //Added 10.11.2017
    hcan.Init.Mode = CAN_MODE_NORMAL;
    hcan.Init.TTCM = DISABLE;
    hcan.Init.ABOM = DISABLE;
    hcan.Init.AWUM = DISABLE;
    hcan.Init.NART = ENABLE;
    hcan.Init.RFLM = DISABLE;
    hcan.Init.TXFP = DISABLE;
            
    hcan.pTxMsg = &txmsg;
    hcan.pRxMsg = &rxmsg;

    result = HAL_CAN_Init(&hcan);
    if (result != 0)
        {
       return CO_ERROR_TIMEOUT;  /* CO- Return Init failed */
    }
  

    /*
		Filter configuration:
        
		CANOpen Messages:
        Function Code (e.g. TxPDO1, ...)    [10:07]
        Node ID                             [06:00]
    */
		
	//node dependend message filter
    memset(&CAN_FilterInitStruct, 0, sizeof (CAN_FilterInitStruct));
    CAN_FilterInitStruct.FilterNumber 		= 0;
    CAN_FilterInitStruct.FilterIdHigh 		= (uint32_t)nodeId << 5;
    CAN_FilterInitStruct.FilterIdLow 			= (uint32_t)nodeId << 5;
    CAN_FilterInitStruct.FilterMaskIdHigh = 0x0000007F << 5;    
		CAN_FilterInitStruct.FilterMaskIdLow  = 0x0000007F << 5; 		//don't care function code, care node id
    CAN_FilterInitStruct.FilterFIFOAssignment = CAN_FIFO0; // 
    CAN_FilterInitStruct.FilterMode = CAN_FILTERMODE_IDMASK;
    CAN_FilterInitStruct.FilterScale = CAN_FILTERSCALE_16BIT;
    CAN_FilterInitStruct.FilterActivation = ENABLE;
    HAL_CAN_ConfigFilter(&hcan, &CAN_FilterInitStruct);

    memset(&CAN_FilterInitStruct, 0, sizeof (CAN_FilterInitStruct));
    CAN_FilterInitStruct.FilterNumber 		= 1;
    CAN_FilterInitStruct.FilterIdHigh 		= 0x00000000;
    CAN_FilterInitStruct.FilterIdLow 			= 0x00000000;
    CAN_FilterInitStruct.FilterMaskIdHigh = 0x00000080 << 5;    
		CAN_FilterInitStruct.FilterMaskIdLow  = 0x00000000 << 5; 		//don't care function code, care node id
    CAN_FilterInitStruct.FilterFIFOAssignment = CAN_FIFO0; // 
    CAN_FilterInitStruct.FilterMode = CAN_FILTERMODE_IDLIST;
    CAN_FilterInitStruct.FilterScale = CAN_FILTERSCALE_16BIT;
    CAN_FilterInitStruct.FilterActivation = ENABLE;
    HAL_CAN_ConfigFilter(&hcan, &CAN_FilterInitStruct);



		__HAL_CAN_ENABLE_IT(&hcan,CAN_IT_TME | CAN_IT_FMP0);
		
    return CO_ERROR_NO;
}

void CO_CANmodule_disable(CO_CANmodule_t *CANmodule){
    /* turn off the module */
	HAL_CAN_DeInit(&hcan);
}

CO_ReturnError_t CO_CANrxBufferInit(
        CO_CANmodule_t         *CANmodule,
        uint16_t                index,
        uint16_t                ident,
        uint16_t                mask,
        bool_t                  rtr,
        void                   *object,
        void                  (*pFunct)(void *object, const CanRxMsgTypeDef *message))
{
	uint16_t RXF, RXM;
	
    CO_ReturnError_t ret = CO_ERROR_NO;

    if((CANmodule!=NULL) && (object!=NULL) && (pFunct!=NULL) && (index < CANmodule->rxSize)){
        /* buffer, which will be configured */
        CO_CANrx_t *buffer = &CANmodule->rxArray[index];

        /* Configure object variables */
        buffer->object = object;
        buffer->pFunct = pFunct;

		//CAN identifier and CAN mask, bit aligned with CAN module registers
		RXF = (ident & 0x07FF) << 2;
		if (rtr) RXF |= 0x02;
		RXM = (mask & 0x07FF) << 2;
		RXM |= 0x02;

		//configure filter and mask
		if (RXF != buffer->ident || RXM != buffer->mask)
        {
            buffer->ident = RXF;
            buffer->mask = RXM;
        }
    }
    else
    {
        ret = CO_ERROR_ILLEGAL_ARGUMENT;
    }

    return ret;
}

CO_CANtx_t *CO_CANtxBufferInit(
        CO_CANmodule_t         *CANmodule,
        uint16_t                index,
        uint16_t                ident,
        bool_t                  rtr,
        uint8_t                 noOfBytes,
        bool_t                  syncFlag)
{
	  uint32_t TXF;
    CO_CANtx_t *buffer = NULL;

    if((CANmodule != NULL) && (index < CANmodule->txSize)){
        //get specific buffer
        buffer = &CANmodule->txArray[index];

        //CAN identifier, bit aligned with CAN module registers

        TXF = ident << 21;
        TXF &= 0xFFE00000;
        if (rtr) TXF |= 0x02;

        //write to buffer
        buffer->ident = TXF;
        buffer->DLC = noOfBytes;
        buffer->bufferFull = 0;
        buffer->syncFlag = syncFlag ? 1 : 0;
    }

    return buffer;
}

CO_ReturnError_t CO_CANsend(CO_CANmodule_t *CANmodule, CO_CANtx_t *buffer){
    CO_ReturnError_t err = CO_ERROR_NO;

    /* Verify overflow */
    if(buffer->bufferFull){
        if(!CANmodule->firstCANtxMessage){
            /* don't set error, if bootup message is still on buffers */
            CO_errorReport((CO_EM_t*)CANmodule->em, CO_EM_CAN_TX_OVERFLOW, CO_EMC_CAN_OVERRUN, buffer->ident);
        }
        err = CO_ERROR_TX_OVERFLOW;
    }

    CO_LOCK_CAN_SEND();
    /* if CAN TX buffer is free, copy message to it */
    if(1 && CANmodule->CANtxCount == 0){
        CANmodule->bufferInhibitFlag = buffer->syncFlag;
        /* copy message and txRequest */
				CO_CANsendToModule(CANmodule, buffer);
				
    }
    /* if no buffer is free, message will be sent by interrupt */
    else{
        buffer->bufferFull = true;
        CANmodule->CANtxCount++;
    }
    CO_UNLOCK_CAN_SEND();

    return err;
}

void CO_CANclearPendingSyncPDOs(CO_CANmodule_t *CANmodule){
    uint32_t tpdoDeleted = 0U;

    CO_LOCK_CAN_SEND();
    /* Abort message from CAN module, if there is synchronous TPDO.
     * Take special care with this functionality. */
    if(/*messageIsOnCanBuffer && */CANmodule->bufferInhibitFlag){
        /* clear TXREQ */
        CANmodule->bufferInhibitFlag = false;
        tpdoDeleted = 1U;
    }
    /* delete also pending synchronous TPDOs in TX buffers */
    if(CANmodule->CANtxCount != 0U){
        uint16_t i;
        CO_CANtx_t *buffer = &CANmodule->txArray[0];
        for(i = CANmodule->txSize; i > 0U; i--){
            if(buffer->bufferFull){
                if(buffer->syncFlag){
                    buffer->bufferFull = false;
                    CANmodule->CANtxCount--;
                    tpdoDeleted = 2U;
                }
            }
            buffer++;
        }
    }
    CO_UNLOCK_CAN_SEND();


    if(tpdoDeleted != 0U){
        CO_errorReport((CO_EM_t*)CANmodule->em, CO_EM_TPDO_OUTSIDE_WINDOW, CO_EMC_COMMUNICATION, tpdoDeleted);
    }
}
